# trlc

./: .bazelrc  .gitignore  BUILD  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md  TUTORIAL-ADVANCED-TYPES.md  TUTORIAL-ADVANCED.md  TUTORIAL-API.md  TUTORIAL-BASIC.md  TUTORIAL-CHECKS.md  TUTORIAL-CI.md  TUTORIAL-ENUM.md  TUTORIAL-INSTALL.md  TUTORIAL-LINT.md  TUTORIAL-OPTIONAL-BASE.md  TUTORIAL.md  coverage.cfg  cvc5.BUILD  index.rst  lobster-trlc-system-test.py  lobster.conf  online_report_config.yaml  pylint3.cfg  pyproject.toml  requirements.txt  requirements.txt.bazel  requirements_dev.txt  requirements_dev_lock.txt  requirements_lock.txt  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_lock_3_12.txt  requirements_lock_3_9.txt  section_api.rst  setup.cfg  setup.py  trlc-lrm-generator.py  (+2 more)
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  lint.yml  package.yml  publish.yml  release.yml  release_prep.sh  test.yml
api-examples/filename-check/: BUILD  example.rsl  example.trlc  filename-1.py  filename-2.py  filename-3.py  filename-4.py
bazel/_private/: BUILD.bazel  mode_test.py  partial_test.bzl  system_test.bzl
docs/: .buildinfo  LRM.md  architecture.md  genindex.html  index.html  knowledge_accumulation.dot  lrm-2.4.html  lrm-2.5.html  lrm-2.6.html  lrm-2.7.html  lrm-2.8.html  lrm.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/: index.rst.txt
docs/_static/: classic.css  documentation_options.js
docs/manual/: ast.html  errors.html  infrastructure.html
docs/vcg-example/: potato.rsl  trlc-Potato-Kitten_0000.smt2  trlc-Potato-Kitten_0001.smt2  trlc-Potato-Kitten_0002.smt2  trlc-Potato-Kitten_0003.smt2  trlc-Potato-Kitten_0004.smt2  trlc-Potato-Kitten_0005.smt2  trlc-Potato-Kitten_0006.smt2
documentation/: LRM.md  SAFETYMANUAL.md  TUTORIAL-ADVANCED-TYPES.md  TUTORIAL-ADVANCED.md  TUTORIAL-API.md  TUTORIAL-ARRAYS.md  TUTORIAL-BASIC.md  TUTORIAL-BAZEL.md  TUTORIAL-BCR-RELEASE.md  TUTORIAL-CHECKS.md  TUTORIAL-CI.md  TUTORIAL-INSTALL.md  TUTORIAL-LINT.md  TUTORIAL-OPTIONAL-BASE.md  TUTORIAL-PACKAGE.md  TUTORIAL-TUPLES.md  TUTORIAL.md  architecture.md  dev_setup.md  linter.md  linter.tex
documentation/vcg-example/: trlc-Potato-Kitten_0001.smt2  trlc-Potato-Kitten_0002.smt2
language-reference-manual/: LICENSE.html_fragment  LRM.md  README.md  lobster-trlc.conf  lobster-trlc.yaml  lrm.rsl  lrm.trlc  proposal-checks.md  proposal-dot-separators.md
manual/: ast.rst  errors.rst  infrastructure.rst  section_api.rst
renderer/: BUILD  README.md  requirements.in  requirements_lock.txt  trlc_renderer.bzl  trlc_renderer.py
renderer/assets/: trlc_renderer_seq.puml
sphinx/: conf.py
test/: test.rsl  test.trlc  test2.trlc  test3.trlc  test4.trlc
tests/: .gitignore  Makefile  coverage.cfg
tests-large-partial/: BUILD  Makefile  partial-1.output  partial-1.scenario  partial-2.output  partial-2.scenario
tests-large-partial/large/: generic.rsl  package_1.rsl  package_10.rsl  package_10_1.trlc  package_11.rsl  (+204 more)
tests-system/: .gitignore  BUILD  Makefile
tests-unit/: BUILD.bazel  test_ast_bysection.py  test_lexer.py  test_lexer_base.py  test_nested_packages.py  test_source_manager.py
tools/lint/: BUILD.bazel  linters.bzl
trlc/: BUILD  __init__.py  __main__.py  ast.py  errors.py  lexer.py  lint.py  math.py  nested.py  parser.py  trlc.py  vcg.py  version.py
util/: BUILD  bump_version_post_release.py  changelog.py  check_local_modifications.sh  clean_coverage.sh  fetch_cvc5.py  github_release.py  large-test-generator.py  lint_check.sh  mk_ast_hierarchy.py  mk_parser_hierarchy.py  pycodestyle_runner.py  rebuild_old_lrm.sh  release.py  squash_commits.sh
(+1958 files in other folders)
