load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

# Pylint binary from the pip hub. Add pylint to requirements_dev.txt to make
# it available here.
py_console_script_binary(
    name = "pylint",
    pkg = "@trlc_dev_dependencies//pylint:pkg",
    deps = [
        "@trlc_dev_dependencies//astroid:pkg",
        "@trlc_dev_dependencies//dill:pkg",
        "@trlc_dev_dependencies//isort:pkg",
        "@trlc_dev_dependencies//mccabe:pkg",
        "@trlc_dev_dependencies//platformdirs:pkg",
        "@trlc_dev_dependencies//tomlkit:pkg",
    ],
    visibility = ["//visibility:public"],
)
